# webCamTest

./: CMakeLists.txt  README.md  myVideoClass.cpp  myVideoClass.h  webcam.cpp
